added param include to /corpora/poems, needs testing
